# serializer version: 1
# name: test_happy_path[one_area]
  list([
    Area(name='H12W34', id='123', data_available_since=datetime.date(2021, 1, 1), data_available_until=datetime.date(2022, 2, 2)),
  ])
# ---
# name: test_happy_path[two_areas]
  list([
    Area(name='H12W34', id='123', data_available_since=datetime.date(2021, 1, 1), data_available_until=datetime.date(2021, 1, 1)),
    Area(name='SP567 TNr:890', id='124', data_available_since=datetime.date(2021, 1, 1), data_available_until=datetime.date(2021, 1, 1)),
  ])
# ---
